<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imageapp"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/interactiveView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/text_birth_year"
                style="@style/texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/allan_bold"
                android:shadowColor="@color/black"
                android:text="@string/year_birth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_yearOfBirth"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:hint="@string/year"
        android:inputType="text"
        android:textColor="#9F131313"
        android:textColorHint="#9F191616"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/text_birth_year"
        app:layout_constraintStart_toStartOf="@id/text_birth_year"
        app:layout_constraintTop_toBottomOf="@id/text_birth_year"
        />

            <TextView
                android:id="@+id/text_day_and_month"
                style="@style/texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/allan_bold"
                android:text="@string/day_and_month"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_yearOfBirth" />

            <RadioGroup
                android:id="@+id/button_day_and_month_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_day_and_month"
                tools:ignore="RtlSymmetry">

                <RadioButton
                    android:id="@+id/button_radio_1"
                    style="@style/botton_and_radioBottton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:orientation="vertical"
                    android:text="@string/before_of" />

                <RadioButton
                    android:id="@+id/button_radio_2"
                    style="@style/botton_and_radioBottton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/in_"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_radio_1" />

                <RadioButton
                    android:id="@+id/button_radio_3"
                    style="@style/botton_and_radioBottton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/after_"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_radio_2" />

                <RadioButton
                    android:id="@+id/button_radio_4"
                    style="@style/botton_and_radioBottton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/dont_know"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_radio_3" />

            </RadioGroup>

            <Button
                android:id="@+id/button_calculate"
                style="@style/botton_and_radioBottton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/my_age"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25dp"
                app:layout_constraintTop_toBottomOf="@id/button_day_and_month_options"
                tools:ignore="SpUsage,TextViewEdits" />

            <TextView
                android:id="@+id/text_Observation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/observation"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/button_calculate"
                app:layout_constraintStart_toStartOf="@id/button_calculate"
                app:layout_constraintTop_toBottomOf="@id/button_calculate" />

            <TextView
                android:id="@+id/text_answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/empity_string"
                android:textColor="#00000000"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_Observation" />

            <TextView
                android:id="@+id/text_answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/empity_string"
                android:textColor="#00000000"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_answer_1" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>